language/move-lang/tests/move_check/parser/struct_field_missing_type.exp
error: 

   ┌── tests/move_check/parsing/struct_field_missing_type.move:2:18 ───
   │
 2 │     struct S { f }
   │                  ^ Unrecognized Token: }
   ·
 2 │     struct S { f }
   │                  - Expected:  ":",
   │

