language/move-lang/tests/move_check/parser/struct_field_missing_type.move
module M {
    struct S { f } // Each field must specify a type
}
